# test_technezis

./: .env.example  README.md  bot.py  docker-compose.yml  models.py  parser.py  requirements.txt
api/: Dockerfile  pyproject.toml
api/src/: main.py
bot/: Dockerfile  pyproject.toml
bot/src/: handlers.py  main.py  models.py
worker/: Dockerfile  main.py  pyproject.toml
worker/src/: __init__.py  config.py  handlers.py  main.py  models.py
